# icarus

./: AGENTS.md  Cargo.toml  README.md  Taskfile.yaml  config.toml
docs/feat/: ai-cropping-refined.md
src/: cli.rs  config.rs  cropper.rs  detection.rs  error.rs  image_io.rs  logging.rs  main.rs  visualization.rs
