[package]
name = "icarus"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
image = { version = "0.25", features = ["jpeg", "png", "webp", "tiff"] }
kamadak-exif = "0.5"
dirs = "5.0"
ort = "2.0.0-rc.1"
ndarray = "0.15"
serde_json = "1.0"
